--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "csgo-information-api",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "axios": "^1.1.2",
