--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "axios": "^1.1.2",
