--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "csgo-information-api",
   "version": "0.0.0",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "^1.1.2",
